inserto resultado obtenido de la rest api en el html. Agrego spinner de busqueda

--- a/index.html
+++ b/index.html
@@ -6,10 +6,11 @@
 	 <meta http-equiv="X-UA-Compatible" content="ie=edge">
 	 <title>Libros Gratuitos</title>
 	 <link rel="stylesheet" href="css/bootstrap.css">
+	 <link href="css/style.css" rel="stylesheet">
 </head>
 <body>
 	<nav class="navbar navbar-expand-lg navbar-dark bg-primary mb-5">
-		<a class="navbar-brand" href="#">Busca tus libros Gratuitos</a>
+		<a class="navbar-brand" target="_blank" href="https://openlibra.com/es/">Busca tus libros Gratuitos</a>
 	</nav> 
 	 <div class="container buscador">
 			   <div id="buscador" class=" card card-body">
@@ -29,11 +30,19 @@
 						<label for="exampleSelect1">Selecciona la Categoría</label>
 						<select class="form-control" id="listado-categorias"></select>
 					</div>
-
+					<div class="contenido-spinner">
+						<div class="spinner">
+							<div class="bounce1"></div>
+							<div class="bounce2"></div>
+							<div class="bounce3"></div>
+						</div>
+				    </div>
 
 				   <input type="submit" class="mt-5 form-control btn btn-success" id="buscarBtn" value="Buscar">
 			   </div>  
-			   <div id="resultado-libros" class="row mt-5"></div>
+			   <div id="resultado-libros" class="row mt-5">
+					
+			   </div>
 		   </div>
 	   
 		   <footer class="mt-5 p-3 text-center bg-primary">
@@ -43,7 +52,7 @@
 		  <script src="js/openlibra.js"></script>
 		  <script src="js/interfaz.js"></script>
 		  <script src="js/app.js"></script>
-		   <style>
+		 <!--   <style>
 				.texto-info {
 				   font-weight: bold;
 				   margin-top: 30px;
@@ -51,6 +60,6 @@
 				footer {
 					 color: white;
 				}
-		   </style>
+		   </style> -->
 </body>
 </html>
