actualizo readme.md

--- a/index.html
+++ b/index.html
@@ -46,20 +46,11 @@
 		   </div>
 	   
 		   <footer class="mt-5 p-3 text-center bg-primary">
-			   Buscador de Libros Gratuitos &copy;
+			   Creado por RNG &copy;
 		   </footer>
 	   
 		  <script src="js/openlibra.js"></script>
 		  <script src="js/interfaz.js"></script>
 		  <script src="js/app.js"></script>
-		 <!--   <style>
-				.texto-info {
-				   font-weight: bold;
-				   margin-top: 30px;
-				}
-				footer {
-					 color: white;
-				}
-		   </style> -->
 </body>
 </html>
